--- a/Dan.html
+++ b/Dan.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The STEM club - Granger High</title>
-    <link rel="manifest" href="/site.webmanifest">
-
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
 </head>
 <body>
+    <img src="STEM.png" alt="Logo of STEM club" width="200" height="200">
+
     <h1>Contact Information</h1>
 
     <p>Name: Dan Giang (Leader of Granger TSA)</p>
@@ -17,5 +18,6 @@
     
     <p>Phone Number: <a href="tel:+13855492589">385 549-2589</a></p>
     
+    <img src="STEM CER2.png" alt="Logo of STEM club" >
 </body>
 </html>
